--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ olefile==0.44
 packaging==16.8
 pyparsing==2.1.10
 python-dateutil==2.6.0
+python-twitter==3.2.1
 requests==2.13.0
 requests-file==1.4.1
 six==1.10.0
