Las changes 'berry' version

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,8 @@
-lxml==3.7.2
-MarkupSafe==0.23
-Pillow==4.0.0
-PyYAML==3.12
-Unidecode==0.4.20
-appdirs==1.4.0
-beautifulsoup4==4.5.3
-click==6.7
-cssselect==1.0.1
-feedfinder2==0.0.4
-fbchat==0.7.1
-feedparser==5.2.1
+wikipedia==1.4.0
 Flask==0.12
-idna==2.2
-itsdangerous==0.24
-jieba3k==0.35.1
-Jinja2==2.9.5
-newspaper3k==0.1.9
-nltk==3.2.2
-olefile==0.44
-packaging==16.8
-pyparsing==2.1.10
-python-dateutil==2.6.0
-python-twitter==3.2.1
+packaging
+appdirs
 requests==2.13.0
-requests-file==1.4.1
 six==1.10.0
-tldextract==2.0.2
-Werkzeug==0.11.15
+xhtml2pdf==0.2b1
+xmltodict
