--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ wikipedia==1.4.0
 Flask==0.12
 packaging
 appdirs
+nltk==3.2.4
 requests==2.13.0
 six==1.10.0
+textblob==0.12.0
 xmltodict==0.11.0
 Unidecode==0.4.20
