--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,11 @@ appdirs
 nltk==3.2.4
 requests==2.13.0
 six==1.10.0
+numpy==1.13.0
+Morfessor==2.0.2a4
+pycld2==0.31
+PyICU==1.9.7
+polyglot==16.7.4
 textblob==0.12.0
 xmltodict==0.11.0
 Unidecode==0.4.20
