--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,8 @@
 [database]
 file=database.db
+[mail]
+host=smtp.gmail.com
+port=587
+username=mark@takethejuice.com
+password=4kDk=n%%S_$hhBMEk
+admin=hello@takethejuice.com
