--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ six==1.10.0
 textblob==0.12.0
 xmltodict==0.11.0
 Unidecode==0.4.20
+breadability==0.1.20
+chardet==3.0.4
+docopt==0.6.2
+sumy==0.6.0
+numpy==1.13.0
