--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ Flask==0.12
 packaging
 appdirs
 nltk==3.2.4
+numpy==1.13
 requests==2.13.0
 six==1.10.0
+sumy==0.6
 textblob==0.12.0
 xmltodict==0.11.0
 Unidecode==0.4.20
